--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,15 +20,15 @@
             <li><%= link_to 'ジャンル一覧',  admin_genres_path %></li>
             <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete %></li>
           <% elsif end_user_signed_in? %>
-            <p>ようこそ、<%= current_end_user.full_name %>さん!</p>
+            <p>ようこそ、<%= current_end_user.name %>さん!</p>
             <li><%= link_to 'マイページ', mypage_path %></li>
             <li><%= link_to '投稿一覧', posts_path %></li>
-            <li><%= link_to 'ログアウト', destroy_customer_session_path, method: :delete %></li>
+            <li><%= link_to 'ログアウト', destroy_end_user_session_path, method: :delete %></li>
           <% else %>
             <li><%= link_to '投稿一覧', posts_path %></li>
             <li><%= link_to '新規登録', new_end_user_registration_path %></li>
             <li><%= link_to 'ログイン', new_end_user_session_path %></li>
-            <li><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></li>
+            <li><%= link_to 'ゲストログイン（閲覧用）', end_users_guest_sign_in_path, method: :post %></li>
           <% end %>
         </ul>
         <% if admin_signed_in? %>
