--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,6 @@ header {
   z-index: 100;
   top: 0;
   left: 0;
-  background-color: #E0FFFF;
   * {
     position: relative;
     z-index: 100;
@@ -30,12 +29,6 @@ header {
     justify-content: space-between;
     width: 960px;
     margin: 0 auto;
-    .logo {
-      padding: 10px 20px;
-      font-family: "Century";
-      font-size: 20px;
-      text-decoration: none;
-    }
     ul {
       justify-content: flex-end;
       p {
@@ -62,6 +55,12 @@ header {
     }
   }
 }
+.logo {
+  padding: 10px 20px;
+  font-family: "Century";
+  font-size: 20px;
+  text-decoration: none;
+}
 .admin_header {
   background-color: #aaf;
   .header-content {
@@ -78,9 +77,6 @@ header {
       right: 0;
       display: flex;
       justify-content: space-between;
-      input[name="search[content]"] {
-        width: 280px;
-      }
     }
   }
 }
@@ -92,4 +88,14 @@ footer {
   font-size: 14px;
   text-align: center;
   background-color: #ccc;
+}
+th {
+  border-style: solid;
+  border-color: #aaa;
+  background-color: #ddd;
+}
+td {
+  padding: 10px;
+  border-style: solid;
+  border-color: #aaa;
 }
